--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -148,7 +148,9 @@
    "source": [
     "sql = '''Select bathroomcnt, bedroomcnt, calculatedfinishedsquarefeet, taxvaluedollarcnt, yearbuilt, taxamount, fips from properties_2017\n",
     "join propertylandusetype using (propertylandusetypeid)\n",
+    "join predictions_2017 using (parcelid)\n",
     "where propertylandusedesc = \"Single Family Residential\"\n",
+    "AND predictions_2017.transactiondate like '%2017%'\n",
     "'''\n",
     "\n",
     "df = pd.read_sql(sql, get_connection(\"zillow\"))\n",
