adding to turn in

--- a/Scaling&Explore.ipynb
+++ b/Scaling&Explore.ipynb
@@ -369,6 +369,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49343452",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78e98192",
+   "metadata": {},
+   "source": [
+    "## Based on the work you've done, choose a scaling method for your dataset. Write a function within your prepare.py that accepts as input the train, validate, and test data splits, and returns the scaled versions of each. Be sure to only learn the parameters for scaling from your training data!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ba9aad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import dependencies\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "#Define function to scale all data based on the train subset\n",
+    "def scale_data(train, validate, test):\n",
+    "    \n",
+    "    scale_columns = ['bedrooms', 'bathrooms', 'sq_ft']\n",
+    "    \n",
+    "    train_scaled = train.copy()\n",
+    "    validate_scaled = validate.copy()\n",
+    "    test_scaled = test.copy()\n",
+    "    \n",
+    "    mms = MinMaxScaler()\n",
+    "    \n",
+    "    mms.fit(train[scale_columns])\n",
+    "    \n",
+    "    train_scaled[scale_columns] = mms.transform(train[scale_columns])\n",
+    "    validate_scaled[scale_columns] = mms.transform(validate[scale_columns])\n",
+    "    test_scaled[scale_columns] = mms.transform(test[scale_columns])\n",
+    "    \n",
+    "    return train_scaled, validate_scaled, test_scaled"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c9b4ca3e",
    "metadata": {},
