--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -867,12 +867,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ba1a873",
+   "cell_type": "markdown",
+   "id": "8c5856a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The features from SelectKBest are being chosen based on correlation with the target variable, while the features from RFE are selected based on the performance of a linear regression model. These two approaches are different, which is why they may produce different results."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -902,7 +902,29 @@
    "id": "d770652d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Define the SelectKBest function\n",
+    "def select_kbest(X, y, k):\n",
+    "    \n",
+    "    f_selector = SelectKBest(f_regression, k=k)\n",
+    "    \n",
+    "    f_selector.fit(X, y)\n",
+    "    \n",
+    "    mask = f_selector.get_support()\n",
+    "    \n",
+    "    return list(X.columns[mask])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "588967f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Verify it works\n",
+    "select_kbest(train_X, train_y, 5)"
+   ]
   },
   {
    "cell_type": "markdown",
