--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -1334,9 +1334,114 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "896f43c5",
+   "metadata": {},
+   "source": [
+    "Is your model better than the baseline model?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59613af6",
+   "metadata": {},
+   "source": [
+    "- yes it is "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59869bf8",
+   "metadata": {},
+   "source": [
+    "Create a file named evaluate.py that contains the following functions.\n",
+    "\n",
+    "plot_residuals(y, yhat): creates a residual plot\n",
+    "regression_errors(y, yhat): returns the following values:\n",
+    "sum of squared errors (SSE)\n",
+    "explained sum of squares (ESS)\n",
+    "total sum of squares (TSS)\n",
+    "mean squared error (MSE)\n",
+    "root mean squared error (RMSE)\n",
+    "baseline_mean_errors(y): computes the SSE, MSE, and RMSE for the baseline model\n",
+    "better_than_baseline(y, yhat): returns true if your model performs better than the baseline, otherwise false"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a49f4a71",
+   "id": "d96d8255",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dependencies for these functions\n",
+    "import math\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bac64c7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_residuals(y, yhat):\n",
+    "    residuals = yhat - y\n",
+    "    plt.scatter(x=y, y=residuals)\n",
+    "    plt.title('Residual plot')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "176c8ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def regression_errors(y, yhat):\n",
+    "    sse = mean_squared_error(y, yhat) * len(y)\n",
+    "    ess = sum((yhat - y.mean()) ** 2)\n",
+    "    tss = sse + ess\n",
+    "    mse = mean_squared_error(y, yhat)\n",
+    "    rmse = math.sqrt(mse)\n",
+    "    return sse, ess, tss, mse, rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b581c6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def baseline_mean_errors(y):\n",
+    "    sse = mean_squared_error(y, y.mean()) * len(y)\n",
+    "    mse = mean_squared_error(y, y.mean())\n",
+    "    rmse = math.sqrt(mse)\n",
+    "    return sse, mse, rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c349c82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def better_than_baseline(y, yhat):\n",
+    "    sse = regression_errors(y, yhat)\n",
+    "    sse_b = baseline_mean_errors(y)\n",
+    "    if sse < sse_b:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d37557b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1344,15 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ccd0086",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5629825f",
+   "id": "ba9ed390",
    "metadata": {},
    "outputs": [],
    "source": []
